kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photowebapp-paas
  labels:
    app.kubernetes.io/name: photowebapp
    app.kubernetes.io/part-of: PhotoWebApp_PAAS
  annotations:
    project-name: PhotoWebApp_PAAS
